[gd_scene load_steps=5 format=3 uid="uid://c6tftscbtspu3"]

[ext_resource type="Script" uid="uid://qmp7vkc3d7au" path="res://scripts/options.gd" id="1_nmn1p"]
[ext_resource type="Texture2D" uid="uid://dacg73wq786q5" path="res://ressources/retour1.png" id="2_pxqj8"]
[ext_resource type="Texture2D" uid="uid://bdp6hre2uk2w" path="res://ressources/retour2.png" id="3_w238l"]
[ext_resource type="Texture2D" uid="uid://bor3b4ypy8nee" path="res://ressources/options_1-1.png.png" id="4_pxqj8"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nmn1p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -2.0
offset_right = 12.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5686275)

[node name="retour" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.767
anchor_top = 0.82600003
anchor_right = 0.98700005
anchor_bottom = 0.924
offset_left = -2.5840454
offset_top = -0.24804688
offset_right = -0.024047852
offset_bottom = 0.24798584
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_pxqj8")
texture_hover = ExtResource("3_w238l")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051000003
anchor_top = 0.040000003
anchor_right = 0.41000003
anchor_bottom = 0.89000005
offset_left = 0.24799728
offset_top = 0.07999802
offset_right = -0.32003784
offset_bottom = -0.053344727
texture = ExtResource("4_pxqj8")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35900003
anchor_top = 0.16000001
anchor_right = 0.938
anchor_bottom = 0.79800004
offset_left = -0.5680237
offset_top = 413.32
offset_right = -254.57605
offset_bottom = 667.1627
rotation = -1.5707964
texture = ExtResource("4_pxqj8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.201
anchor_top = 0.272
anchor_right = 0.261
anchor_bottom = 0.316
offset_left = -0.55200195
offset_top = -0.25601196
offset_right = 0.32800293
offset_bottom = 0.23199463
bbcode_enabled = true
text = "Avancer "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19900002
anchor_top = 0.323
anchor_right = 0.261
anchor_bottom = 0.381
offset_left = -0.24801636
offset_top = -0.3040161
offset_right = 0.32800293
offset_bottom = 0.11199951

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19500001
anchor_top = 0.45800003
anchor_right = 0.26500002
anchor_bottom = 0.52000004
offset_left = 0.35998535
offset_top = 0.2159729
offset_right = -0.2800293
offset_bottom = 0.039978027
text = "Reculer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19700001
anchor_top = 0.39800003
anchor_right = 0.26000002
anchor_bottom = 0.45700002
offset_left = 0.055984497
offset_top = 0.09597778
offset_right = -0.52001953
offset_bottom = -0.13601685

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.128
anchor_top = 0.33800003
anchor_right = 0.18400002
anchor_bottom = 0.4
offset_left = -0.4560089
offset_top = -0.024017334
offset_right = 0.031982422
offset_bottom = -0.2000122
text = "Gauche "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.123
anchor_top = 0.4
anchor_right = 0.186
anchor_bottom = 0.45800003
offset_left = 0.30400085
offset_top = -0.2000122
offset_right = -0.27200317
offset_bottom = 0.2159729

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.273
anchor_top = 0.34600002
anchor_right = 0.32200003
anchor_bottom = 0.39400002
offset_left = -0.4960022
offset_top = -0.20800781
offset_right = 0.05596924
offset_bottom = -0.31201172
text = "Droite"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26900002
anchor_top = 0.397
anchor_right = 0.33200002
anchor_bottom = 0.455
offset_left = 0.111968994
offset_top = -0.25601196
offset_right = -0.46401978
offset_bottom = 0.16000366

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47300002
anchor_top = 0.39400002
anchor_right = 0.55
anchor_bottom = 0.483
offset_left = 0.104003906
offset_top = -0.31201172
offset_right = 0.39996338
offset_bottom = 0.015991211
text = "Sensibilit√© souris"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.39400002
anchor_right = 0.837
anchor_bottom = 0.46100003
offset_left = 0.27197266
offset_top = -0.31201172
offset_right = -0.22399902
offset_bottom = 0.27197266
min_value = 1.0
value = 30.0

[node name="speed_val" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66800004
anchor_top = 0.335
anchor_right = 0.73300004
anchor_bottom = 0.38700002
offset_left = 0.46392822
offset_top = -0.08000183
offset_right = -0.41601563
offset_bottom = 0.22398376

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47300002
anchor_top = 0.485
anchor_right = 0.55200005
anchor_bottom = 0.57100004
offset_left = 0.104003906
offset_top = -0.27999878
offset_right = 0.095947266
offset_bottom = -0.008026123
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.49100003
anchor_right = 0.837
anchor_bottom = 0.559
offset_left = 0.27197266
offset_top = -0.16802979
offset_right = -0.22399902
offset_bottom = -0.23199463
value = 100.0

[node name="volume_val" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.669
anchor_top = 0.45400003
anchor_right = 0.734
anchor_bottom = 0.50600004
offset_left = 0.31195068
offset_top = -0.1920166
offset_right = -0.5680542
offset_bottom = 0.111968994

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19800001
anchor_top = 0.563
anchor_right = 0.25300002
anchor_bottom = 0.606
offset_left = -0.0960083
offset_top = 0.17599487
offset_right = -0.45602417
offset_bottom = 0.3119812
text = "Sauter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19500001
anchor_top = 0.611
anchor_right = 0.25800002
anchor_bottom = 0.67
offset_left = 0.35998535
offset_top = 0.07199097
offset_right = -0.2159729
offset_bottom = -0.16000366

[node name="modifier" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.28235295)

[node name="modifier_text" type="RichTextLabel" parent="modifier"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 64
text = "APPUIE SUR LA NOUVELLE TOUCHE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
